--- a/README.rdoc
+++ b/README.rdoc
@@ -25,9 +25,7 @@ config/database/yaml
   post: <of db if necessary>
   
 * Database initialization
-rake db:create
-rake db:migrate
-rake db:seed
+rake db:create db:migrate db:seed
 
 * Deployment instructions
   Heroku Git
